--- a/style/main.css
+++ b/style/main.css
@@ -13,6 +13,9 @@
         right: 0rem !important;
         padding-right: 0.5rem !important;
     }
+    #picture-box figcaption {
+        font-size: 40% !important;
+    }
 }
 /*fix for portrait mode*/
 @media screen and (orientation: landscape) {
@@ -392,6 +395,7 @@ li {
 }
 .company-logo-div img {
     width: 100%;
+    filter: invert(100%);
 }
 .company-logo-div span {
     font-size: 5rem;
@@ -501,15 +505,15 @@ li {
     background-image: url(../media/icons/backtothetopbutton.svg);
     z-index: 1;
 }
-#picture-box{
+#picture-box {
     display: flex;
     width: 100%;
 }
-#picture-box figure{
+#picture-box figure {
     margin: 0;
     width: 25%;
 }
-#picture-box figure img{
+#picture-box figure img {
     width: 90%;
     border-radius: 50%;  
 }
